Update VehicleServiceTest.java